Zero variant broken after 8189941

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b34
    • generic
    • linux

      Zero got broken after 8189941:

      === Output from failing command(s) repeated here ===
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_bytecodeInterpreter.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_bytecodeInterpreter.o:
      (/bin/grep -v -e "^Note: including file:" <
      /usr/src/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_bytecodeInterpreter.o.log || true) | /usr/bin/head
      -n 12
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp: In static member function ‘static void BytecodeInterpreter::run(interpreterState)’:
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:107:51: error: ‘static void SafepointSynchronize::block(JavaThread*)’ is private within this
      context
               CALL_VM(SafepointSynchronize::block(THREAD), handle_exception); \
                                                         ^
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:418:9: note: in definition of macro ‘CALL_VM_NAKED_LJF’
               func; \
               ^~~~
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:436:11: note: in expansion of macro ‘CALL_VM_NOCHECK’
                 CALL_VM_NOCHECK(func); \
                 ^~~~~~~~~~~~~~~
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:107:9: note: in expansion of macro ‘CALL_VM’
               CALL_VM(SafepointSynchronize::block(THREAD), handle_exception); \
      if test `/usr/bin/wc -l <
      /usr/src/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_bytecodeInterpreter.o.log` -gt 12; then /bin/echo
      " ... (rest of output omitted)" ; fi
         ... (rest of output omitted)
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_bytecodeInterpreterWithChecks.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_bytecodeInterpreterWithChecks.o:
      (/bin/grep -v -e "^Note: including file:" <
      /usr/src/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_bytecodeInterpreterWithChecks.o.log || true) |
      /usr/bin/head -n 12
      In file included from /usr/src/hs/build/linux-x86_64-normal-zero-release/hotspot/variant-zero/gensrc/jvmtifiles/bytecodeInterpreterWithChecks.cpp:3:0:
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp: In static member function ‘static void BytecodeInterpreter::runWithChecks(interpreterState)’:
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:107:51: error: ‘static void SafepointSynchronize::block(JavaThread*)’ is private within this
      context
               CALL_VM(SafepointSynchronize::block(THREAD), handle_exception); \
                                                         ^
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:418:9: note: in definition of macro ‘CALL_VM_NAKED_LJF’
               func; \
               ^~~~
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:436:11: note: in expansion of macro ‘CALL_VM_NOCHECK’
                 CALL_VM_NOCHECK(func); \
                 ^~~~~~~~~~~~~~~
      /usr/src/hs/src/hotspot/share/interpreter/bytecodeInterpreter.cpp:107:9: note: in expansion of macro ‘CALL_VM’
      if test `/usr/bin/wc -l <
      /usr/src/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_bytecodeInterpreterWithChecks.o.log` -gt 12; then
      /bin/echo " ... (rest of output omitted)" ; fi
         ... (rest of output omitted)
      /usr/bin/printf "\n* All command lines available in /usr/src/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs.\n"

      * All command lines available in /usr/src/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs.
      /usr/bin/printf "=== End of repeated output ===\n"
      === End of repeated output ===
      if /bin/grep -q "recipe for target .* failed" /usr/src/hs/build/linux-x86_64-normal-zero-release/build.log 2> /dev/null; then /usr/bin/printf "\n=== Make failed
      targets repeated here ===\n" ; /bin/grep "recipe for target .* failed" /usr/src/hs/build/linux-x86_64-normal-zero-release/build.log ; /usr/bin/printf "=== End
      of repeated output ===\n" ; /usr/bin/printf "\nHint: Try searching the build log for the name of the first failed target.\n" ; else /usr/bin/printf "\nNo
      indication of failed target found.\n" ; /usr/bin/printf "Hint: Try searching the build log for '] Error'.\n" ; fi

      === Make failed targets repeated here ===
      lib/CompileJvm.gmk:209: recipe for target '/usr/src/hs/build/linux-x86_64-normal-zero-release/hotspot/variant-zero/libjvm/objs/bytecodeInterpreter.o' failed
      lib/CompileJvm.gmk:209: recipe for target '/usr/src/hs/build/linux-x86_64-normal-zero-release/hotspot/variant-zero/libjvm/objs/bytecodeInterpreterWithChecks.o'
      failed
      make/Main.gmk:268: recipe for target 'hotspot-zero-libs' failed
      === End of repeated output ===

            Assignee:
            John Paul Adrian Glaubitz
            Reporter:
            John Paul Adrian Glaubitz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: