8191333: Zero variant broken after 8189941

Reviewed-by: rehn, coleenp